--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #ecf0f1;
+    background-color: #6bbdb9;
     margin: 0;
     padding: 0;
 }
@@ -15,7 +15,7 @@ body {
 
 h1 {
     text-align: center;
-    color: #ffffff;
+    color: #000000;
     margin-bottom: 20px; 
 }
 
@@ -23,11 +23,11 @@ form {
     max-width: 250px;
     width: 100%;
     padding: 15px;
-    border: 1px solid #2c3e50;
+    border: 1px solid #9bda72;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #34495e;
-    color: #ecf0f1;
+    background-color: #83dfb9;
+    color: #000000;
 }
 
 label {
@@ -40,9 +40,9 @@ input {
     margin-bottom: 10px;
     padding: 10px;
     box-sizing: border-box;
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    border: 1px solid #2c3e50;
+    background-color: #d8f0d0;
+    color: #000000;
+    border: 1px solid #54d89b;
 }
 
 .error {
