Done login stuff

--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #6bbdb9;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 .container {
@@ -16,7 +16,8 @@ body {
 h1 {
     text-align: center;
     color: #000000;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    padding-top: 30px;
 }
 
 form {
