Admin-item-features

--- a/frontend/src/app/Admin-Features/all-items/all-items.component.html
+++ b/frontend/src/app/Admin-Features/all-items/all-items.component.html
@@ -1,18 +1,27 @@
+<div class="search-sort-bar">
+  <div class="Title">Items</div>
+  <input type="search" placeholder="Search item here">
+  <div class="sort-buttons">
+    <button>Default</button>
+    <button>A-Z</button>
+    <button>List view</button>
+  </div>
+</div>
+
 <div class="items-container">
-    <div *ngFor="let item of items" class="item">
-      <img [src]="'http://127.0.0.1:5000/static/item_images/' + item.item_image" alt="{{ item.name }}"
-      style="cursor: pointer" [routerLink] = "['/items', item._id]">
-      <div class="item-details">
-        <h3>{{ item.name }}</h3>
-        <p>{{ item.description }}</p>
-        <p><strong>Price:</strong> {{ item.price | currency }}</p>
-      </div>
+  <div *ngFor="let item of items" class="item">
+    <img [src]="'http://127.0.0.1:5000/static/item_images/' + item.item_image" alt="{{ item.name }}"
+      style="cursor: pointer" [routerLink] = "['/item', item._id]">
+    <div class="item-details">
+      <h3>{{ item.name }}</h3>
+      <p>{{ item.description }}</p>
+      <p><strong>Price:</strong> {{ item.price | currency }}</p>
     </div>
   </div>
-  
-  <div class="pagination">
-    <button (click)="previousPage()" [disabled]="page === 1">Previous</button>
-    <span>Page {{ page }}</span>
-    <button (click)="nextPage()" [disabled]="!canGoNext()">Next</button>
-  </div>
-  
+</div>
+
+<div class="pagination">
+  <button (click)="previousPage()" [disabled]="page === 1">Previous</button>
+  <span>Page {{ page }}</span>
+  <button (click)="nextPage()" [disabled]="!canGoNext()">Next</button>
+</div>
