Admin-create/delete-items

--- a/frontend/src/app/Admin-Features/all-items/all-items.component.html
+++ b/frontend/src/app/Admin-Features/all-items/all-items.component.html
@@ -2,9 +2,8 @@
   <div class="Title">Items</div>
   <input type="search" placeholder="Search item here">
   <div class="sort-buttons">
-    <button>Default</button>
-    <button>A-Z</button>
-    <button>List view</button>
+    <button class="add-item" (click)="openAddItemModal()">Create a New Item</button>
+    <button (click)="sortItemsAlphabetically()">Sort {{ sortDirection === 'asc' ? 'A-Z' : 'Z-A' }}</button>
   </div>
 </div>
 
@@ -14,14 +13,21 @@
       style="cursor: pointer" [routerLink] = "['/item', item._id]">
     <div class="item-details">
       <h3>{{ item.name }}</h3>
-      <p>{{ item.description }}</p>
-      <p><strong>Price:</strong> {{ item.price | currency }}</p>
+      <p><strong>Category: </strong>{{ item.category }}</p>
+      <p><strong>Stock: </strong>{{ item.stock_quantity }}</p>
+      <p><strong>Desc: </strong>{{ item.description }}</p>
+      <p><strong>Price: </strong> {{ item.price | currency }}</p>
+      <p><strong>Reviews: </strong> {{ item.item_reviews?.length || 0 }}</p>
+      <button class="Delete" (click)="deleteItem(item._id)">Remove Item</button>
     </div>
   </div>
 </div>
 
 <div class="pagination">
   <button (click)="previousPage()" [disabled]="page === 1">Previous</button>
-  <span>Page {{ page }}</span>
+  <span class="page">Page {{ page }}</span>
   <button (click)="nextPage()" [disabled]="!canGoNext()">Next</button>
 </div>
+
+
+<app-add-item-modal *ngIf="showAddItemModal" (addItem)="addItem($event)" (closeModalEvent)="showAddItemModal=false"></app-add-item-modal>
