--- a/frontend/src/app/Admin-Features/all-items/all-items.component.css
+++ b/frontend/src/app/Admin-Features/all-items/all-items.component.css
@@ -14,7 +14,7 @@
   border: 1px solid #000000;
   border-radius: 8px;
   border-radius: 8px;
-  height: 480px;
+  height: auto;
   width: 430px;
 }
 
@@ -79,6 +79,11 @@ h3 {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+}
+
+.page {
+  color: #000000;
+  padding: 5px;
 }
 
 button {
