--- a/frontend/src/app/Admin-Features/view-item/view-item.component.css
+++ b/frontend/src/app/Admin-Features/view-item/view-item.component.css
@@ -1,36 +1,38 @@
-/* Item Details Styling */
 .item-details-container {
-    background-color: #2b2b2b;
-    border-radius: 8px;
-    margin: 20px 0;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .item-poster {
-    max-width: 100%;
-    height: auto;
-    max-height: 400px;
-    border-radius: 4px;
-    margin-bottom: 20px;
-    transition: transform 0.3s ease-in-out; 
-  }
-  
-  .item-poster:hover {
-    transform: scale(1.05); 
-  }
-  
-  .item-info {
-    padding: 10px;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .item-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
+  background: linear-gradient(to right,#c9d6ff, #ab94e3);
+  border-radius: 10px;
+  margin: 20px 0;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.item-poster {
+  max-width: 100%;
+  height: auto;
+  max-height: 400px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  transition: transform 0.3s ease-in-out; 
+}
+
+.item-poster:hover {
+  transform: scale(1.05); 
+}
+
+.item-info {
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.item-title {
+  color: #512da8;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
   
   /* Reviews Container */
   .reviews-container {
@@ -122,11 +124,8 @@
     transition: background-color 0.3s ease-in-out;
   }
   
-  .form-section button:hover {
-    background-color: #bca000;
-  }
   
-  .btn-edit, .btn-danger {
+  .btn-danger {
     background-color: #ccb535; 
     color: #fff;
     padding: 8px 12px;
@@ -135,11 +134,7 @@
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
   }
-  
-  .btn-edit:hover, .btn-danger:hover {
-    background-color: #bca000;
-  }
-  
+
   .btn-danger {
     background-color: #dc3545;
   }
