--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #2f8572; 
+    background: linear-gradient(to right,#c9d6ff, #ab94e3);
     padding: 10px;
     color: #ffffff; 
     display: flex;
@@ -7,13 +7,14 @@
     align-items: center;
     position: relative;
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-brand a {
     font-family: 'Roboto Slab', serif;
     font-size: 50px;
     text-decoration: none;
-    color: #3fa796; 
+    color: #512da8;
     font-weight: bold;
     letter-spacing: 1px;
 }
@@ -30,17 +31,21 @@
 .navbar a {
     text-decoration: none;
     color: #ffffff; 
-    margin-right: 20px;
+    margin-right: 43px;
     font-weight: bold;
     transition: color 0.3s ease;
 }
 
+.badge {
+    margin-left: 10px;
+}
+
 .navbar a:hover {
-    color: #aad4c9; 
+    color: #5c6bc0;
 }
 
 .navbar button {
-    background-color: #47c7a4;
+    background-color: #512da8;
     color: #fff;
     padding: 5px 10px;
     margin: 10px;
@@ -51,7 +56,7 @@
 }
 
 .navbar button:hover {
-    background-color: #3fa796;
+    background-color: #5c6bc0;
 }
 
 .menu-toggle {
@@ -70,7 +75,7 @@
 
 .menu-toggle.active .bar:nth-child(1),
 .menu-toggle.active .bar:nth-child(3) {
-    background-color: #47c7a4; 
+    background-color: #5c6bc0; 
 }
 
 @media (max-width: 768px) {
@@ -81,7 +86,7 @@
         top: 80px;
         left: 0;
         width: 100%;
-        background-color: #2f8572; 
+        background-color: #c9d6ff;
         border-radius: 0 0 8px 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         z-index: 0;
