--- a/frontend/src/app/Profiles/user-profile/user-profile.component.html
+++ b/frontend/src/app/Profiles/user-profile/user-profile.component.html
@@ -1,1 +1,18 @@
-<p>user-profile works!</p>
+<div class="account-container">
+    <div class="user-icon">
+        <h2>Welcome, {{ userProfile?.name }}!</h2>
+        <img *ngIf="userProfile && userProfile.avatar" [src]="'http://127.0.0.1:5000/static/icons/' + userProfile.avatar" alt="User Icon">
+    </div>
+    <div class="account-details">
+        <p><strong>Email:</strong> {{ userProfile?.email }}</p>
+        <p><strong>Medical Number:</strong> {{ userProfile?.medicalNumber }}</p>
+        <p><strong>Role: </strong> {{ userProfile?.role }}</p>
+        <p><strong>Purchase History:</strong> {{ userProfile?.purchaseHistory }}</p>
+        <div *ngIf="isLoading">
+            <p>Loading profile...</p>
+        </div>
+        <div *ngIf="error">
+            <p class="error">{{ error }}</p>
+        </div>
+    </div>
+</div>
