--- a/frontend/src/app/User-Features/all-user-items/all-user-items.component.css
+++ b/frontend/src/app/User-Features/all-user-items/all-user-items.component.css
@@ -5,7 +5,7 @@
     padding: 50px;
     justify-items: center;
     background-color: #c9d6ff;
-    background: linear-gradient(to right, #c3f1f7, #c9d6ff);
+    background: linear-gradient(to left,#c9d6ff, #8decdd);
 }
   
 
