--- a/frontend/src/app/Profiles/user-profile/user-profile.component.css
+++ b/frontend/src/app/Profiles/user-profile/user-profile.component.css
@@ -1,4 +1,3 @@
-/* Styling for the main container */
 .account-container {
     max-width: 700px;
     margin: 30px auto;
@@ -11,14 +10,14 @@
 }
 
 
-/* Styling for the welcome message */
+
 h2 {
     color: #ffff;
     border-bottom: 1px solid #000000;
     text-align: center;
 }
     
-/* Styling for account details */
+
 p {
     margin: 10px 0;
     text-align: center;
@@ -29,6 +28,7 @@ p {
     height: 81px;
     margin-right: 73px;
     margin-left: 45%;
+    margin-bottom: 18px;
     border: 1px solid #000000;
     border-radius: 40px;
 }
@@ -42,9 +42,11 @@ p {
     background-color: #c8d7fe;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s ease-in-out;
+    color: #523ea5;
 }
 
 .account-details:hover {
     background-color: #512da8;
+    color: white;
 }
     
