--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(to right,#c9d6ff, #ab94e3);
+    background: linear-gradient(to left, #5c6bc0, #512da8);
     padding: 10px;
     color: #ffffff; 
     display: flex;
@@ -46,9 +46,9 @@
 }
 
 .navbar button {
-    background-color: #512da8;
+    background-color: #37f7e5;
     color: #fff;
-    padding: 5px 10px;
+    padding: 9px 17px;
     margin: 10px;
     border: none;
     border-radius: 4px;
